# PortableTab

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  sample.py  sample_read.py  sample_write.py
.github/workflows/: python-3.10.yml  python-3.11.yml  python-3.12.yml  python-3.13.yml  python-3.7.yml  python-3.8.yml  python-3.9.yml
PortableTab/: __init__.py  __main__.py  base_table.py  capnp_manager.py  capnp_table.py
docs/: PortableTab.base_table.rst  PortableTab.capnp_manager.rst  PortableTab.capnp_table.rst  cli.rst  conf.py  index.rst  install.rst  overview.rst  quick_start.rst
samples/: quick_start.py  sample_trie_index.py  sample_write.py  sample_write2.py
tests/: conftest.py  test_table.py
