[tool.poetry]
name = "PortableTab"
version = "0.3.1"
description = "Python package for serializing tables in portable format with Capnp."
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "PortableTab"}]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
pycapnp = "^1.3.0"
marisa-trie = "^0.7.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "*"
sphinx = "<6"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portabletab = "PortableTab.__main__:main"
