[tool.poetry]
name = "PortableTab"
version = "0.3.7"
description = "Python package for serializing tables in portable format with Capnp."
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "PortableTab"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
docopt-ng = "^0.6.2"
pycapnp = "^2.0.0"
marisa-trie = ">=1.1.0"
zipp = ">=3.19.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.doc.dependencies]
jinja2 = ">=3.1.6"
sphinx = "<6"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portabletab = "PortableTab.__main__:main"
